[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Background.png" type="Texture" id=2]
[ext_resource path="res://Font/PixelOperator.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 15
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
Button/colors/font_color_focus = Color( 0.00392157, 0.941176, 0.87451, 1 )
Button/colors/font_color_hover = Color( 0.00392157, 0.941176, 0.87451, 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="Bg"]
margin_left = 285.0
margin_top = 209.0
margin_right = 537.0
margin_bottom = 618.0
rect_scale = Vector2( 2, 2 )
theme = SubResource( 2 )
custom_constants/separation = 9

[node name="Continue" type="Button" parent="Bg/VBoxContainer"]
margin_right = 252.0
margin_bottom = 22.0
focus_next = NodePath("../Start")
focus_previous = NodePath("../Exit")
disabled = true
text = "Continue"

[node name="Start" type="Button" parent="Bg/VBoxContainer"]
margin_top = 31.0
margin_right = 252.0
margin_bottom = 53.0
focus_next = NodePath("../Options")
focus_previous = NodePath("../Continue")
text = "Iniciar"

[node name="Options" type="Button" parent="Bg/VBoxContainer"]
margin_top = 62.0
margin_right = 252.0
margin_bottom = 84.0
focus_next = NodePath("../Exit")
focus_previous = NodePath("../Start")
disabled = true
text = "Opções"

[node name="Exit" type="Button" parent="Bg/VBoxContainer"]
margin_top = 93.0
margin_right = 252.0
margin_bottom = 115.0
focus_next = NodePath("../Continue")
focus_previous = NodePath("../Options")
text = "Sair"

[connection signal="mouse_entered" from="Bg/VBoxContainer/Continue" to="." method="_on_Continue_mouse_entered"]
[connection signal="mouse_entered" from="Bg/VBoxContainer/Start" to="." method="_on_Start_mouse_entered"]
[connection signal="pressed" from="Bg/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="mouse_entered" from="Bg/VBoxContainer/Options" to="." method="_on_Options_mouse_entered"]
[connection signal="mouse_entered" from="Bg/VBoxContainer/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="pressed" from="Bg/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
